[package]
name = "marsh"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
memchr = "2.7.4"
miette = "7.2.0"
oxc_allocator = "0.30.5"
oxc_diagnostics = "0.30.5"
oxc_parser = "0.30.5"
oxc_resolver = "1.12.0"
oxc_semantic = "0.30.5"
oxc_span = "0.30.5"
petgraph = "0.6.5"
rayon = "1.10.0"
rustc-hash = "2.0.0"
simdutf8 = "0.1.5"
